[gd_scene load_steps=2 format=2]

[ext_resource path="res://debug/testingplayground.gd" type="Script" id=1]

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 258.0
margin_top = 275.0
margin_right = 621.0
margin_bottom = 309.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit2" type="LineEdit" parent="."]
margin_left = 765.0
margin_top = 124.0
margin_right = 876.0
margin_bottom = 158.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 212.0
margin_top = 332.0
margin_right = 696.0
margin_bottom = 359.0
text = "Find"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 206.0
margin_top = 390.0
margin_right = 707.0
margin_bottom = 564.0
text = "(result"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 899.0
margin_top = 128.0
margin_right = 933.0
margin_bottom = 155.0
text = "Set"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
